Fix plugin geometry under root-layer-scrolling

This patch fixes the plugin rect calculations in WebPluginContainerImpl
to be correct when root-layer-scrolling is turned on. Without RLS,
"absolute" coordinates are relative to the document origin and so are
invariant under scrolling. This method would account for the frame's
scroll offset by itself.

When RLS is turned on, "absolute" coordinates are relative to the frame
rect and so they already account for the frame scroll.

TESTING=In runtime_enabled_features.json5, set RootLayerScrolling to
`status: "stable"` and run:
`browser_tests --gtest_filter=PPAPINaClNewlibTest.View`

Bug: 802279
Change-Id: I5360d4a86e8a0688107fe88ba79f26b08a56f968