third_party/WebKit/Source/core/frame/LocalFrameView.h
@@ -700,6 +700,7 @@ class CORE_EXPORT LocalFrameView final
   // coordinates". https://crbug.com/417782.
   IntRect AbsoluteToRootFrame(const IntRect&) const;
   IntPoint AbsoluteToRootFrame(const IntPoint&) const;
+  LayoutRect AbsoluteToRootFrame(const LayoutRect&) const;
   IntRect RootFrameToDocument(const IntRect&);
   FloatPoint RootFrameToDocument(const FloatPoint&);
   DoublePoint DocumentToAbsolute(const DoublePoint&) const;
